# PD-VI_repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: reproducibility.md
experiments/real_data/configs/: dataset.yaml  sweep_eta.yaml  train_graph.yaml
experiments/real_data/notes/: inspect_test.py
experiments/real_data/scripts/: run_pipeline.sh  run_seeds.sh  run_tangents_1to5.sh  sweep_eta.sh
src/pdvi/data/: build_tensor_dataset.py  preprocess_anndata.py
src/pdvi/eval/: check_initial_ari.py  plot_ground_truth.py  plot_tangent.py
src/pdvi/graph/: compute_neighbors.py  compute_tangent.py  compute_weight.py
src/pdvi/legacy/: patch_nbr_wip.py
src/pdvi/models/: train_graph.py  train_highdim_mfvi.py  train_patch_highdim.py  train_patch_highdim_multi.py  train_without_graph.py
src/pdvi/utils/: config.py
